--- a/MultiplicationTable/wwwroot/index.html
+++ b/MultiplicationTable/wwwroot/index.html
@@ -56,6 +56,20 @@
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="_content/Blazor-ApexCharts/js/apex-charts.min.js"></script>
     <script src="_content/Blazor-ApexCharts/js/blazor-apex-charts.js"></script>
+    <script>
+        var button = document.querySelector('.btn-bottom');
+        var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+
+        if (isMobile) {
+            window.addEventListener('resize', function () {
+                if (document.activeElement.tagName == 'INPUT' || document.activeElement.tagName == 'TEXTAREA') {
+                    button.style.bottom = 'auto';
+                } else {
+                    button.style.bottom = '0';
+                }
+            });
+        }
+    </script>
 </body>
 
 </html>
