--- a/MultiplicationTable/wwwroot/index.html
+++ b/MultiplicationTable/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/MultiplicationTable/" />
     <!--<base href="/" />-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="MultiplicationTable.styles.css" rel="stylesheet" />
@@ -67,6 +68,14 @@
                 height = viewport.height;
             }
             button.style.bottom = `${height - viewport.height + 10}px`;
+        }
+
+        function shareResult() {
+            navigator.share({
+                title: "test title",
+                text: "Web Share API feature is awesome",
+                url: window.location.href
+            });
         }
     </script>
 </body>
