--- a/MultiplicationTable/wwwroot/index.html
+++ b/MultiplicationTable/wwwroot/index.html
@@ -72,9 +72,9 @@
 
         function shareResult() {
             navigator.share({
-                title: "test title",
-                text: "Web Share API feature is awesome",
-                url: window.location.href
+                title: "Result",
+                text: "Web \n\rShare API feature is awesome",
+                //url: window.location.href + "/result.html" + window.location.search
             });
         }
     </script>
