--- a/MultiplicationTable/wwwroot/index.html
+++ b/MultiplicationTable/wwwroot/index.html
@@ -73,8 +73,8 @@
         function shareResult() {
             navigator.share({
                 title: "Result",
-                text: "Web \n\rShare API feature is awesome",
-                //url: window.location.href + "/result.html" + window.location.search
+                text: "Web Share API feature is awesome",
+                //url: window.location.href
             });
         }
     </script>
